<resources>
    <string name="app_name">TracNghiemApp</string>
    <string name="title_activity_main">TracNghiem</string>
    <string name="title_activity_main2">Chọn môn thi</string>
    <string name="main_tittle">Trắc Nghiệm App</string>
    <string name="main_thi_thu">Thi online</string>
    <string name="main_thi_that">Đóng góp ý kiến</string>
    <string name="main_xep_hang">Xếp Hạng</string>
    <string name="main_dang_nhap">Đăng nhập</string>
    <string name="main_dang_xuat">Đăng xuất</string>
    <string name="main_dang_ki">Đăng Kí</string>

    <string name="view_answer">Xem đáp án</string>
    <string name="submit">Submit</string>

    <string name="dki_mssv">Mã số sinh viên: </string>
    <string name="dki_matkhau">Mật khẩu: </string>
    <string name="dki_re_matkhau">Nhập lại mật khẩu: </string>
    <string name="dki_ten">Tên hiển thị: </string>
    <string name="dki_lop">Lớp: </string>
    <string name="dki_ngaysinh">Ngày sinh: </string>

    <string name="thi_thu_khoa">Chọn Khoa</string>
    <string name="thi_thu_nganh">Chọn Ngành</string>
    <string name="thi_thu_mon">Chọn Môn</string>
    <string name="thi_do_kho">Chọn độ khó</string>

    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_quen_mk">Quên mật khẩu?</string>
    <string name="dang_nhap_ten">Tên đăng nhập</string>
    <string name="dang_nhap_mat_khau">Mật khẩu</string>
    <string name="dang_nhap_luu">Lưu đăng nhập</string>

    <string name="dsxh_ten_mh">Tên môn học</string>
    <string name="dsxh_dokho">Độ khó</string>
    <string name="dsxh_xephang">Xếp hạng</string>

    <string name="xep_hang_mh">Xếp hạng môn học</string>
    <string name="ho_ten">Họ tên</string>
    <string name="batdaulambai">Bắt đầu làm bài</string>
    <string name="thoat">Thoát</string>

    <string name="danh_sach_xep_hang">Danh sách xếp hạng</string>
    <string name="mon_hoc">Môn học:</string>
    <string name="do_kho">Độ khó:</string>
    <string name="diem_cao_nhat">Điểm cao nhất:</string>
    <string name="xep_hang">Xếp hạng:</string>
    <string name="vi_tri">Vị trí:</string>
    <string name="thoi_gian">Thời gian:</string>
    <string name="so_lg_cau_hoi">Số câu:</string>
    <string name="diem">Điểm</string>

    <string name="submited">Kết quả đạt được</string>
    <string name="thong_tin_mon_hoc">Thông tin môn học</string>
    <string name="khoa">Khoa:</string>
    <string name="nganh">Ngành:</string>

    <string name="title_activity_activity_dang_nhap">ActivityDangNhap</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_dang_ki">Đăng ký</string>
    <string name="title_activity_activity_lam_bai"></string>
    <string name="title_activity_activity_ket_qua">Kết quả</string>
    <string name="title_activity_activity_ket_qua_xep_hang">Xếp hạng</string>

    <string name="feedback">Gửi ý kiến</string>
    <string name="wait">Xin chờ</string>
    <string name="conecting">Đang kết nối...</string>
    <string name="conecting30s">Đang kết nối... Nếu quá 10s nghĩa là đã kết nối thành công, bạn vui lòng chờ ứng dụng nhận đề, có thể là 30s. Ngoài ra, bạn vui lòng submit lại. Xin cảm ơn.</string>
    <string name="title_activity_hinh_dap_an">HinhDapAn</string>
    <string name="title_activity_activity_danh_sach_xep_hang">Danh sách xếp hạng</string>
    <string name="title_activity_activity_nhan_de_thi">Nhận đề thi</string>
    <string name="title_activity_activity_feedback">ActivityFeedback</string>


</resources>
