<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:background="@drawable/hinhnen1"
    android:layout_width="match_parent" android:layout_gravity="center"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="#228B22"
            android:text="@string/dang_nhap_ten" />
        <EditText
            android:id="@+id/edtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:hint="@string/dang_nhap_ten" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#228B22"
            android:text="@string/dang_nhap_mat_khau" />
        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:hint="********"
            android:inputType="textPassword"
            android:paddingBottom="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/ckboxLuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap_luu"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:background="#228B22"
            android:textColor="#ffffff"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/tvQuenMatKhau"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dang_nhap_quen_mk"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:textColor="#ff000000"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity" />

    </LinearLayout>




</LinearLayout>