<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent" android:background="@drawable/hinhnen1">

    <LinearLayout
        android:id="@+id/ln_sign"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/signed"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/tbrow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_mssv" />

            <EditText
                android:id="@+id/edtMSSV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbrow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_pass_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_matkhau" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tbrow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_re_pass_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_re_matkhau" />

            <EditText
                android:id="@+id/edtRepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbrow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_name_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_ten" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbrow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_address_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_lop" />

            <EditText
                android:id="@+id/edtClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbrow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_birth_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/dki_ngaysinh" />

            <TextView
                android:id="@+id/tvBirthDay"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bntNgaySinh"
                android:elevation="2dp"
                android:src="@drawable/calendar" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/khoa" />

        <Spinner
            android:id="@+id/spinKhoa"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/cell_shape"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/nganh" />

        <Spinner
            android:id="@+id/spinNganh"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/cell_shape"
            android:textColor="#000000"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/main_dang_ki"
            android:id="@+id/btnSignUp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_effects"
            android:textColor="#ffffff"
            android:textSize="25dp"/>
    </LinearLayout>

</LinearLayout>