<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hinhnen1"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityChonMonThiThu">
    <TextView
        android:id="@+id/tvKhoa"
        android:layout_gravity="left"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/thi_thu_khoa"
        android:textColor="#228B22"
        android:textSize="25dp"
        android:textStyle="bold" />
        <Spinner
        android:id="@+id/spinKhoa"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/tvNganh"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_horizontal"
        android:text="@string/thi_thu_nganh"
        android:textColor="#228B22"
        android:textSize="25dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinNganh"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/tvMonHoc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_horizontal"
        android:text="@string/thi_thu_mon"
        android:textColor="#228B22"
        android:textSize="25dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinMonHoc"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:textColor="#000000"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/shape_effects"
        android:text="Submit" />

</LinearLayout>
