<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@drawable/hinhnen1"
    tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityKetQuaSubmit">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/thong_tin_mon_hoc"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/khoa"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/tvKhoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khoa CNTT"
                android:textSize="22dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            >
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nganh"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />
        <TextView
            android:id="@+id/tvNganh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ngành CNTT"
            android:textSize="22dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mon_hoc"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/tvTenMonHoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chuyên đề Java"
                android:textSize="22dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/do_kho"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/tvDoKho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Khó"
                android:textSize="22dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="Bắt đầu làm bài"
            android:id="@+id/btnLamBai"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_effects"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <Button
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="Thoát"
            android:id="@+id/btnThoat"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_effects"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
    </LinearLayout>
    </LinearLayout>
